syntax = "proto3";

package calendar;

import "google/protobuf/timestamp.proto";

option go_package = "calendarpb";

service CalendarEvents {
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetAll(GetAllRequest) returns (GetAllResponse);
    rpc Add(AddRequest) returns (AddResponse);
    rpc Edit(EditRequest) returns (EditResponse);
    rpc Remove(RemoveRequst) returns (RemoveResponse);
}

message Event {
    string uuid = 1;
    google.protobuf.Timestamp date = 2;
    string message = 3;
}

message GetRequest {
    string user = 1;
    string uuid = 2;
}

message GetResponse {
    Event event = 1;
}

message GetAllRequest {
    string user = 1;
}

message GetAllResponse {
    repeated Event events = 1;
}

message AddRequest {
    string user = 1;
    Event event = 2;
}

message EditRequest {
    string user = 1;
    Event event = 2;
}

message RemoveRequst {
    string user = 1;
    string uuid = 2;
}

message AddResponse {
    bool sucess = 1;
}

message EditResponse {
    bool sucess = 1;
}

message RemoveResponse {
    bool sucess = 1;
}
